<resources>
    <string name="app_name">Routes</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="date_dd_mm_yyyy_hh_mm">Date</string>
    <string name="desctiption">Desctiption</string>
    <string name="google_maps_short_link">Google Maps short link</string>
    <string name="track_distance_km">Track distance (km)</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="title_activity_google_map">Map</string>
    <string name="title_activity_rute">Map</string>
</resources>
